# CORTEX

./: .clang-format  .editorconfig  .gitignore  ADAPTER_IMPLEMENTATION.md  ARCHITECTURE_DIAGRAM.txt  ARCHITECTURE_INDEX.md  ARCHITECTURE_MAP.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CLI_USAGE.md  CONTRIBUTING.md  HARNESS_ARCHITECTURE_CHANGES.md  LICENSE  Makefile  README.md  REPO_IMPROVEMENT_PLAN.md  REVIEW.md  copilot-instructions.md  cortex.py  master_spec  pyproject.toml  requirements.txt
.claude/: MCP_SETUP.md
.claude/commands/: new-kernel.md
.github/: CLAUDE.md  copilot-instructions.md
.github/mcp/: config.json
.github/prompts/: agent-architecture.md  agent-bugs.md  agent-compliance.md  agent-validator.md  review-orchestrator.md
.github/review-state/: feedback-38.json
.github/scripts/: aggregate-reviews.js  compare-feedback.js
.github/workflows/: README.md  ci.yml  claude.yml  multi-agent-review.yml
configs/: README.md  cortex.yaml  example.yaml
cortex_cli/: __init__.py
cortex_cli/commands/: analyze.py  list_kernels.py  pipeline.py  run.py  (+1 more)
datasets/: README.md
docs/: DATASET.md  FAQ.md  KERNELS.md  MACOS_COMPATIBILITY.md  PHASE1_SUMMARY.md  PLUGIN_INTERFACE.md  README.md  ROADMAP.md  RUN_CONFIG.md  TELEMETRY.md  architecture-diagram.md  capability-table-updated.md  literature-positioning.md  protocol-versioning.md  realistic-vs-ideal-benchmarking.md
include/: cortex_plugin.h
kernels/: README.md
paper/: cortex.tex  references.bib
plugins/: Makefile
primitives/: README.md
references/: README.md
scripts/: README.md  convert_edf_to_float32.py  download_edf.sh  requirements.txt
sdk/: Makefile  README.md
tests/: Makefile  README.md  test_adapter_all_kernels.c  test_adapter_smoke.c  test_cli.py  test_clock_resolution.c  test_kernel_accuracy.c  test_kernel_registry.c  test_param_accessor.c  test_placeholders.py  test_protocol.c  test_protocol_loopback.c  test_replayer.c  test_scheduler.c  test_signal_handler.c  test_socketpair_hello.c  test_telemetry.c
(+609 files in other folders)
